Windy Hotel Website
Updates on the interface.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="center">
             <div class="logo">
-                <h2>Web Page</h2>
+                <h2>Windy Hotel</h2>
             </div>
             <div class="menu">
                 <a href="#">
@@ -28,7 +27,7 @@
                     Contato
                 </a>
                 <a class="btn-menu" href="#">
-                    Cadastrar
+                    Reservar
                 </a>
             </div>
         </div>
@@ -37,19 +36,69 @@
     <section class="main">
         <div class="center">
             <div class="main_cta">
-                <h2>One Page Example</h2>
-                <p>This page was made by Marcos.</p>
-                <button>Get Started</button>
+                <h2>Seja bem vindo!</h2>
+                <p>Por Marcos Lopes.</p>
+                <button>Começar</button>
             </div>
         <div class="diferenciais">
             <div class="diferencial-single">
-                <i class=""></i>
-                <h2>Lorem Ipsum</h2>
-                <p>Donec scelerisque odio in faucibus ultrices. Sed sodales finibus magna ac porta.
-                </p>
+                <h2>Acomodações</h2>
+                <p>As melhores acomodações para alocar você e sua família. Nossos quartos acomodam até 6 pessoas.</p>
+            </div>
+            <div class="diferencial-single">
+                <h2>Lazer</h2>
+                <p>O hotel possui opções de lazer para você e toda a família! Playground para as crianças e sala de jogos para os adultos.</p>
+            </div>
+            <div class="diferencial-single">
+                <h2>Café da Manhã</h2>
+                <p>O café da manhã para os hóspedes é servido a partir das seis da manhã e termina às dez horas.</p>
+            </div>
+            <div class="diferencial-single">
+                <h2>Pacotes Turísticos</h2>
+                <p>Os pacotes turísticos oferecidos pelo hotel incluem passeios de canoa, tirolesa, tiro ao alvo e diversas outras atividades.</p>
             </div>
         </div>
         </div>
     </section>
+
+    <section class="conquistas">
+        <div class="center">
+            <div class="conquista-single">
+                <h2>+400 mil</h2>
+                <p>Clientes Atendidos</p>
+            </div>
+            <div class="conquista-single">
+                <h2>+50 mil</h2>
+                <p>Reservas/Ano</p>
+            </div>
+            <div class="conquista-single">
+                <h2>+10 mil</h2>
+                <p>Passeios Realizados</p>
+            </div>
+            <div class="conquista-single">
+                <h2>+250</h2>
+                <p>Quartos</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="sobre">
+        <div class="center">
+            <div class="chamada-sobre">
+            <h2>Sobre o Windy Hotel</h2>
+            <p>A hospitalidade é característica marcante em nossa forma de atendimento.</p>
+        </div>
+        <div class="conteudo-sobre">
+            <p>Se você busca a melhor localização para aproveitar o Parque das Fontes, sua melhor escolha é o Hotel Pousada. Localizado na capital de Minas Gerais, te permite fácil acesso à diversos pontos turísticos, assim como bares, restaurantes e outros.</p>
+            <br>
+            <p>Relaxe e aprecie o melhor que Minas tem a te oferecer. São diversos quartos à sua disposição. Entre em contato para saber mais sobre nossos pacotes. Pacotes promocionais para a família, pacotes individuais ou para casais. Valores especiais para crianças.</p>
+            <br>
+            <p>Hospedando-se em nossos hotéis você tem acesso gratuito e ilimitado a três parques localizados a menos de 10km do hotel e diversas outras atrações para toda a família.</p>
+        </div>
+    </div>
+    </section>
+
+
+
 </body>
 </html>
